@@ -1,5 +1,6 @@
 package com.example.vida.service.impl;
 
+import com.example.vida.dto.request.DeleteRequest;
 import com.example.vida.dto.request.RequestAppointmentDto;
 import com.example.vida.dto.response.UnavailableTimeSlotDTO;
 import com.example.vida.entity.Appointment;
@@ -59,12 +60,12 @@ public class AppointmentServiceImpl implements AppointmentService {
     private static final String TIME_PATTERN = "HH:mm";
     private static final DateTimeFormatter formatterTime = DateTimeFormatter.ofPattern(TIME_PATTERN);
 
-    public Map<String, Object> searchAppointmentByTitle(String searchText, Integer roomId, int page, int size, Integer userId){
+    public Map<String, Object> searchAppointmentByTitle(String searchText, Integer roomId, int pageNo, int pageSize, Integer userId){
         try {
-            if (page > 0) {
-                page = page - 1;
+            if (pageNo > 0) {
+                pageNo = pageNo - 1;
             }
-            Pageable pageable = PageRequest.of(page, size);
+            Pageable pageable = PageRequest.of(pageNo, pageSize);
             Specification<Appointment> specification = new Specification<Appointment>() {
                 @Override
                 public Predicate toPredicate(Root<Appointment> root, CriteriaQuery<?> query, CriteriaBuilder criteriaBuilder) {
@@ -113,10 +114,11 @@ public class AppointmentServiceImpl implements AppointmentService {
                     appointments.addAll(createDailyAppointments(baseAppointment));
                     break;
                 case WEEKLY:
-                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDay());
+                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDays());
                     appointments.addAll(createWeeklyAppointments(baseAppointment, weeklyDays));
                     break;
                 case ONLY:
+                    baseAppointment.setSeriesId(null);
                     appointments.add(baseAppointment);
                     break;
             }
@@ -152,6 +154,7 @@ public class AppointmentServiceImpl implements AppointmentService {
         appointment.setCreatorName(UserContext.getUser().getUsername());
         appointment.setUpdatorId(UserContext.getUser().getUserId());
         appointment.setUpdatorName(UserContext.getUser().getUsername());
+        appointment.setSeriesId(String.valueOf(UUID.randomUUID()));
 
         User currentUser = userRepository.findById(UserContext.getUser().getUserId())
                 .orElseThrow(() -> new UserNotFoundException("Current user not found"));
@@ -188,6 +191,7 @@ public class AppointmentServiceImpl implements AppointmentService {
                     currentDate,
                     baseAppointment.getStartTime(),
                     baseAppointment.getEndTime(),
+                    baseAppointment.getSeriesId(),
                     errors
             );
 
@@ -231,6 +235,7 @@ public class AppointmentServiceImpl implements AppointmentService {
                         currentDate,
                         baseAppointment.getStartTime(),
                         baseAppointment.getEndTime(),
+                        baseAppointment.getSeriesId(),
                         errors
                 );
 
@@ -319,9 +324,9 @@ public class AppointmentServiceImpl implements AppointmentService {
         validateRecurrence(appointmentDto, date,recurrenceEndDate,recurrencePattern,errors);
 
         // Check for conflicts only if no other errors
-        if (errors.isEmpty()) {
-            checkForConflicts(appointmentDto.getRoomId(), date, startTime, endTime, errors);
-        }
+//        if (errors.isEmpty()) {
+//            checkForConflicts(appointmentDto.getRoomId(), date, startTime, endTime, errors);
+//        }
         if (appointmentDto.getUpdaterSelection() != null) {
             if (!appointmentDto.getUpdaterSelection().equals(1) && !appointmentDto.getUpdaterSelection().equals(2)) {
                 errors.put("updaterSelection", "Invalid selection");
@@ -398,15 +403,15 @@ public class AppointmentServiceImpl implements AppointmentService {
     }
 
     private void validateWeeklyRecurrence(RequestAppointmentDto appointmentDto, Map<String, String> errors) {
-        List<String> weeklyDays = appointmentDto.getWeeklyDay();
+        List<String> weeklyDays = appointmentDto.getWeeklyDays();
         if (weeklyDays == null || weeklyDays.isEmpty()) {
-            errors.put("weeklyDay", "Weekly days must be specified for weekly recurring appointments");
+            errors.put("weeklyDays", "Weekly days must be specified for weekly recurring appointments");
             return;
         }
 
         List<String> invalidDays = weeklyDays.stream()
                 .filter(day -> !isValidWeekDay(day))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!invalidDays.isEmpty()) {
             errors.put("weeklyDay",
@@ -416,16 +421,32 @@ public class AppointmentServiceImpl implements AppointmentService {
         }
     }
 
-    private void checkForConflicts(int roomId, LocalDate date, LocalTime startTime, LocalTime endTime,
+    private void checkForConflicts(int roomId, LocalDate date,
+                                   LocalTime startTime, LocalTime endTime,
+                                   String currentSeriesId,
                                    Map<String, String> errors) {
+        // Find conflicting appointments
         List<Appointment> existingAppointments = appointmentRepository
                 .findConflictingAppointments(roomId, date, startTime, endTime);
 
-        boolean hasConflict = existingAppointments.stream()
-                .anyMatch(existing -> isTimeOverlap(startTime, endTime,
-                        existing.getStartTime(), existing.getEndTime()));
+        // Filter out conflicts
+        List<Appointment> actualConflicts = existingAppointments.stream()
+                .filter(existing -> {
+                    // Ignore appointments in the same series
+                    if (currentSeriesId != null &&
+                            existing.getSeriesId() != null &&
+                            currentSeriesId.equals(existing.getSeriesId())) {
+                        return false;
+                    }
 
-        if (hasConflict) {
+                    // Check for actual time overlap
+                    return isTimeOverlap(startTime, endTime,
+                            existing.getStartTime(), existing.getEndTime());
+                })
+                .toList();
+
+        // If there are actual conflicts, add error
+        if (!actualConflicts.isEmpty()) {
             errors.put("date", "Conflict with existing appointment");
         }
     }
@@ -538,6 +559,19 @@ public class AppointmentServiceImpl implements AppointmentService {
 
     private Appointment updateSingleAppointment(Appointment appointment, RequestAppointmentDto requestAppointmentDto, User currentUser) {
         try {
+            List<Appointment> appointmentList=appointmentRepository.findConflictingAppointments(requestAppointmentDto.getRoomId(), LocalDate.parse(requestAppointmentDto.getDate()),LocalTime.parse(requestAppointmentDto.getStartTime()),LocalTime.parse(requestAppointmentDto.getEndTime()));
+            List<Appointment> actualConflicts = appointmentList.stream()
+                    .filter(existing -> {
+                        // Check for actual time overlap
+                        return isTimeOverlap(LocalTime.parse(requestAppointmentDto.getStartTime()), LocalTime.parse(requestAppointmentDto.getEndTime()),
+                                existing.getStartTime(), existing.getEndTime());
+                    })
+                    .toList();
+
+            // If there are actual conflicts, add error
+            if (actualConflicts.size()>1) {
+                throw new AppointmentValidationException("Conflict with existing appointment");
+            }
             // Copy properties from DTO to entity
             BeanUtils.copyProperties(requestAppointmentDto, appointment);
 
@@ -586,7 +620,7 @@ public class AppointmentServiceImpl implements AppointmentService {
                     newAppointments = createDailyAppointments(baseAppointment);
                     break;
                 case WEEKLY:
-                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDay());
+                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDays());
                     newAppointments = createWeeklyAppointments(baseAppointment,weeklyDays);
                     break;
                 default:
@@ -664,8 +698,13 @@ public class AppointmentServiceImpl implements AppointmentService {
         log.info("Deleted {} future appointments with same pattern starting from date {}. Room: {}, Time: {}-{}",
                 deletedCount, selectedDate, room.getId(), startTime, endTime);
     }
-    public void deleteAppointments(List<Integer> ids) {
-        List<Integer> existingIds = appointmentRepository.findAllExistingIds(ids);
+    public void deleteAppointments(DeleteRequest request) {
+        List<Integer> ids = request.getIds();
+        List<Appointment> appointmentsToDelete = appointmentRepository.findAllById(ids);
+
+        List<Integer> existingIds = appointmentsToDelete.stream()
+                .map(Appointment::getId)
+                .toList();
 
         List<Integer> notFoundIds = ids.stream()
                 .filter(id -> !existingIds.contains(id))
@@ -675,7 +714,7 @@ public class AppointmentServiceImpl implements AppointmentService {
             throw new AppointmentNotFoundException("Appointments not found for ids: " + notFoundIds);
         }
 
-        appointmentRepository.deleteAllById(ids);
+        appointmentRepository.deleteAll(appointmentsToDelete);
     }
 
     public Appointment getAppointmentById(Integer id){
